--- a/check_variables_cmip.ipynb
+++ b/check_variables_cmip.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,12 +81,11 @@
     "]\n",
     "member_ids = [\"r1i1p1f1\"]\n",
     "\n",
-    "experiment_ids = [\"1pctCO2-bgc\"]  #'abrupt-4xCO2',\n",
+    "experiment_ids = [\"1pctCO2\"]  #'abrupt-4xCO2',\n",
     "institution_ids = [\"NOAA-GFDL\"]\n",
     "source_ids = [\"GFDL-ESM4\"]\n",
     "variable_ids = [\"sithick\", \"siconc\", \"sisnthick\", \"sisnconc\"]\n",
-    "table_ids = [\"SImon\", \"SImon\", \"SImon\", \"SImon\"]\n",
-    "# variable_ids = [\"sithick\"]"
+    "table_ids = [\"SImon\", \"SImon\", \"SImon\", \"SImon\"]"
    ]
   },
   {
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,49 +126,102 @@
       " ==> table_id=='Omon' and member_id=='r1i1p1f1' and grid_label=='gr' and experiment_id=='historical' and source_id=='GFDL-ESM4'\n",
       "\n",
       "      activity_id institution_id  source_id experiment_id member_id table_id  \\\n",
-      "39123        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39125        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39126        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39127        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39129        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39131        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39132        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39136        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39138        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39140        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
-      "39142        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39375        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39377        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39378        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39379        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39381        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39383        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39384        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39388        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39390        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39392        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
+      "39394        CMIP      NOAA-GFDL  GFDL-ESM4    historical  r1i1p1f1     Omon   \n",
       "\n",
       "      variable_id grid_label  \\\n",
-      "39123       cfc11         gr   \n",
-      "39125        hfds         gr   \n",
-      "39126          pp         gr   \n",
-      "39127         sf6         gr   \n",
-      "39129          so         gr   \n",
-      "39131         sos         gr   \n",
-      "39132       spco2         gr   \n",
-      "39136      thetao         gr   \n",
-      "39138         tos         gr   \n",
-      "39140    volcello         gr   \n",
-      "39142         zos         gr   \n",
+      "39375       cfc11         gr   \n",
+      "39377        hfds         gr   \n",
+      "39378          pp         gr   \n",
+      "39379         sf6         gr   \n",
+      "39381          so         gr   \n",
+      "39383         sos         gr   \n",
+      "39384       spco2         gr   \n",
+      "39388      thetao         gr   \n",
+      "39390         tos         gr   \n",
+      "39392    volcello         gr   \n",
+      "39394         zos         gr   \n",
       "\n",
       "                                                  zstore  dcpp_init_year  \n",
-      "39123  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39125  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39126  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39127  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39129  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39131  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39132  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39136  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39138  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39140  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
-      "39142  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39375  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39377  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39378  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39379  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39381  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39383  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39384  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39388  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39390  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39392  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
+      "39394  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/historical...             NaN  \n",
       "Running projections query on data: \n",
-      " ==> member_id=='r1i1p1f1' and grid_label=='gr' and experiment_id=='1pctCO2-bgc' and source_id=='GFDL-ESM4'\n",
+      " ==> member_id=='r1i1p1f1' and grid_label=='gr' and experiment_id=='1pctCO2' and source_id=='GFDL-ESM4'\n",
       "\n",
-      "Empty DataFrame\n",
-      "Columns: [activity_id, institution_id, source_id, experiment_id, member_id, table_id, variable_id, grid_label, zstore, dcpp_init_year]\n",
-      "Index: []\n"
+      "      activity_id institution_id  source_id experiment_id member_id table_id  \\\n",
+      "39200        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39201        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39202        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39203        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39204        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39205        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39206        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39207        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39208        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39210        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1     Omon   \n",
+      "39211        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1      Oyr   \n",
+      "39212        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1      Oyr   \n",
+      "39214        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1    SImon   \n",
+      "39216        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1    SImon   \n",
+      "39218        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1    SImon   \n",
+      "39220        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1    SImon   \n",
+      "39222        CMIP      NOAA-GFDL  GFDL-ESM4       1pctCO2  r1i1p1f1    SImon   \n",
+      "\n",
+      "      variable_id grid_label  \\\n",
+      "39200         chl         gr   \n",
+      "39201         co3         gr   \n",
+      "39202  co3satarag         gr   \n",
+      "39203         dfe         gr   \n",
+      "39204      intdoc         gr   \n",
+      "39205  limirrdiat         gr   \n",
+      "39206  limirrdiaz         gr   \n",
+      "39207  limirrmisc         gr   \n",
+      "39208  limirrpico         gr   \n",
+      "39210         tos         gr   \n",
+      "39211          o2         gr   \n",
+      "39212          ph         gr   \n",
+      "39214      siconc         gr   \n",
+      "39216    sisnconc         gr   \n",
+      "39218   sisnthick         gr   \n",
+      "39220     sithick         gr   \n",
+      "39222       sivol         gr   \n",
+      "\n",
+      "                                                  zstore  dcpp_init_year  \n",
+      "39200  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39201  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39202  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39203  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39204  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39205  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39206  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39207  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39208  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39210  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39211  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39212  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39214  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39216  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39218  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39220  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n",
+      "39222  gs://cmip6/CMIP/NOAA-GFDL/GFDL-ESM4/1pctCO2/r1...             NaN  \n"
      ]
     }
    ],
