--- a/CMIP6_variables.ipynb
+++ b/CMIP6_variables.ipynb
@@ -101,9 +101,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pangeo-Jun2019",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pangeojun2019"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -115,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
