--- a/PivotTables.ipynb
+++ b/PivotTables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfp = search_df(df, experiment_id=['historical','ssp585'], table_id=['Omon','Amon'], variable_id=[\"uas\",\"vas\",\"tos\"], grid_label=['gr'])\n"
+    "#dfp = search_df(df, experiment_id=['historical','ssp585'], table_id=['Omon','Amon'], variable_id=[\"uas\",\"vas\",\"tos\"], grid_label=['gr'])\n",
+    "dfp = search_df(df, experiment_id=['historical','ssp585'], table_id=['Omon','Amon'], variable_id=[\"chl\",\"intdoc\",\"tos\",\"o2sat\",\"ocfriver\",\"icfriver\"], grid_label=['gr'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +86,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>variable_id</th>\n",
+       "      <th>chl</th>\n",
+       "      <th>icfriver</th>\n",
+       "      <th>intdoc</th>\n",
+       "      <th>o2sat</th>\n",
        "      <th>tos</th>\n",
-       "      <th>uas</th>\n",
-       "      <th>vas</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>experiment_id</th>\n",
@@ -95,80 +98,74 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"17\" valign=\"top\">historical</th>\n",
+       "      <th rowspan=\"13\" valign=\"top\">historical</th>\n",
        "      <th>CESM2</th>\n",
        "      <td>11</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CESM2-FV2</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CESM2-WACCM</th>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CESM2-WACCM-FV2</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CIESM</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CNRM-CM6-1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CNRM-ESM2-1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E3SM-1-0</th>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E3SM-1-1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E3SM-1-1-ECA</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EC-Earth3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EC-Earth3-Veg</th>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -176,136 +173,119 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GFDL-ESM4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>IPSL-CM6A-LR</th>\n",
-       "      <td>0</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KACE-1-0-G</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MRI-ESM2-0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NorESM2-LM</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"11\" valign=\"top\">ssp585</th>\n",
+       "      <th rowspan=\"6\" valign=\"top\">ssp585</th>\n",
        "      <th>CESM2</th>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CESM2-WACCM</th>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CNRM-CM6-1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CNRM-CM6-1-HR</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CNRM-ESM2-1</th>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EC-Earth3-Veg</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GFDL-CM4</th>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GFDL-ESM4</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>IPSL-CM6A-LR</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KACE-1-0-G</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MRI-ESM2-0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "variable_id                    tos  uas  vas\n",
-       "experiment_id source_id                     \n",
-       "historical    CESM2             11    0    0\n",
-       "              CESM2-FV2          1    0    0\n",
-       "              CESM2-WACCM        1    0    0\n",
-       "              CESM2-WACCM-FV2    1    0    0\n",
-       "              CIESM              0    2    0\n",
-       "              CNRM-CM6-1         0   28   27\n",
-       "              CNRM-ESM2-1        0    5    5\n",
-       "              E3SM-1-0           1    0    0\n",
-       "              E3SM-1-1           1    0    0\n",
-       "              E3SM-1-1-ECA       1    0    0\n",
-       "              EC-Earth3          2    3    2\n",
-       "              EC-Earth3-Veg      0    3    3\n",
-       "              GFDL-CM4           1    0    0\n",
-       "              GFDL-ESM4          1    0    0\n",
-       "              IPSL-CM6A-LR       0   32   32\n",
-       "              KACE-1-0-G         1    3    3\n",
-       "              MRI-ESM2-0         1    0    0\n",
-       "ssp585        CESM2              2    0    0\n",
-       "              CESM2-WACCM        1    0    0\n",
-       "              CNRM-CM6-1         0    6    6\n",
-       "              CNRM-CM6-1-HR      0    1    1\n",
-       "              CNRM-ESM2-1        0    5    5\n",
-       "              EC-Earth3-Veg      0    1    1\n",
-       "              GFDL-CM4           1    0    0\n",
-       "              GFDL-ESM4          1    0    0\n",
-       "              IPSL-CM6A-LR       0    6    6\n",
-       "              KACE-1-0-G         1    1    1\n",
-       "              MRI-ESM2-0         1    0    0"
+       "variable_id                    chl  icfriver  intdoc  o2sat  tos\n",
+       "experiment_id source_id                                         \n",
+       "historical    CESM2             11         0       3      0   11\n",
+       "              CESM2-FV2          1         0       1      0    1\n",
+       "              CESM2-WACCM        3         0       3      0    3\n",
+       "              CESM2-WACCM-FV2    1         0       1      0    1\n",
+       "              E3SM-1-0           0         0       0      0    3\n",
+       "              E3SM-1-1           0         0       0      0    1\n",
+       "              E3SM-1-1-ECA       0         0       0      0    1\n",
+       "              EC-Earth3          0         0       0      0    3\n",
+       "              GFDL-CM4           1         0       0      0    1\n",
+       "              GFDL-ESM4          0         0       0      0    1\n",
+       "              KACE-1-0-G         0         0       0      0    1\n",
+       "              MRI-ESM2-0         0         0       0      0    4\n",
+       "              NorESM2-LM         1         0       1      1    0\n",
+       "ssp585        CESM2              2         0       2      0    2\n",
+       "              CESM2-WACCM        5         0       4      0    5\n",
+       "              GFDL-CM4           1         1       0      0    1\n",
+       "              GFDL-ESM4          1         0       1      1    1\n",
+       "              KACE-1-0-G         0         0       0      0    1\n",
+       "              MRI-ESM2-0         0         0       0      0    1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
