Initial try at albedo

--- a/PivotTables.ipynb
+++ b/PivotTables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,17 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#dfp = search_df(df, experiment_id=['historical','ssp585'], table_id=['Omon','Amon'], variable_id=[\"uas\",\"vas\",\"tos\"], grid_label=['gr'])\n",
-    "dfp = search_df(df, experiment_id=['historical','ssp585'], table_id=['Omon','Amon'], variable_id=[\"chl\",\"intdoc\",\"tos\",\"o2sat\",\"ocfriver\",\"icfriver\"], grid_label=['gr'])\n"
+    "dfp = search_df(df, experiment_id=['historical','ssp585'], table_id=['SImon'], variable_id=[\"sithick\", \"siconc\", \"sisnthick\", \"sisnconc\"], grid_label=['gr'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -86,11 +86,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>variable_id</th>\n",
-       "      <th>chl</th>\n",
-       "      <th>icfriver</th>\n",
-       "      <th>intdoc</th>\n",
-       "      <th>o2sat</th>\n",
-       "      <th>tos</th>\n",
+       "      <th>siconc</th>\n",
+       "      <th>sisnconc</th>\n",
+       "      <th>sisnthick</th>\n",
+       "      <th>sithick</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>experiment_id</th>\n",
@@ -99,144 +98,63 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"13\" valign=\"top\">historical</th>\n",
-       "      <th>CESM2</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CESM2-FV2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CESM2-WACCM</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CESM2-WACCM-FV2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">historical</th>\n",
        "      <th>E3SM-1-0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E3SM-1-1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E3SM-1-1-ECA</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>EC-Earth3</th>\n",
+       "      <th>GFDL-CM4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GISS-E2-1-H</th>\n",
+       "      <td>20</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KACE-1-0-G</th>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">ssp585</th>\n",
        "      <th>GFDL-CM4</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GFDL-ESM4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KACE-1-0-G</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MRI-ESM2-0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NorESM2-LM</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">ssp585</th>\n",
-       "      <th>CESM2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CESM2-WACCM</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GFDL-CM4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GFDL-ESM4</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -244,17 +162,8 @@
        "    <tr>\n",
        "      <th>KACE-1-0-G</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MRI-ESM2-0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -262,30 +171,20 @@
        "</div>"
       ],
       "text/plain": [
-       "variable_id                    chl  icfriver  intdoc  o2sat  tos\n",
+       "variable_id                 siconc  sisnconc  sisnthick  sithick\n",
        "experiment_id source_id                                         \n",
-       "historical    CESM2             11         0       3      0   11\n",
-       "              CESM2-FV2          1         0       1      0    1\n",
-       "              CESM2-WACCM        3         0       3      0    3\n",
-       "              CESM2-WACCM-FV2    1         0       1      0    1\n",
-       "              E3SM-1-0           0         0       0      0    3\n",
-       "              E3SM-1-1           0         0       0      0    1\n",
-       "              E3SM-1-1-ECA       0         0       0      0    1\n",
-       "              EC-Earth3          0         0       0      0    3\n",
-       "              GFDL-CM4           1         0       0      0    1\n",
-       "              GFDL-ESM4          0         0       0      0    1\n",
-       "              KACE-1-0-G         0         0       0      0    1\n",
-       "              MRI-ESM2-0         0         0       0      0    4\n",
-       "              NorESM2-LM         1         0       1      1    0\n",
-       "ssp585        CESM2              2         0       2      0    2\n",
-       "              CESM2-WACCM        5         0       4      0    5\n",
-       "              GFDL-CM4           1         1       0      0    1\n",
-       "              GFDL-ESM4          1         0       1      1    1\n",
-       "              KACE-1-0-G         0         0       0      0    1\n",
-       "              MRI-ESM2-0         0         0       0      0    1"
+       "historical    E3SM-1-0           3         0          5        5\n",
+       "              E3SM-1-1           1         0          1        1\n",
+       "              E3SM-1-1-ECA       1         0          1        1\n",
+       "              GFDL-CM4           1         1          1        1\n",
+       "              GISS-E2-1-H       20         0          0        0\n",
+       "              KACE-1-0-G         0         3          3        3\n",
+       "ssp585        GFDL-CM4           1         0          1        1\n",
+       "              GFDL-ESM4          1         1          1        1\n",
+       "              KACE-1-0-G         0         1          1        1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
