--- a/seaice-light-cmip6.ipynb
+++ b/seaice-light-cmip6.ipynb
@@ -2,39 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: cmip6_preprocessing in /home/jovyan/.local/lib/python3.7/site-packages (0.1.2)\n",
+      "Requirement already satisfied: rioxarray in /home/jovyan/.local/lib/python3.7/site-packages (0.0.23)\n",
+      "Requirement already satisfied: scipy in /opt/conda/lib/python3.7/site-packages (from rioxarray) (1.4.1)\n",
+      "Requirement already satisfied: pyproj>=2 in /home/jovyan/.local/lib/python3.7/site-packages (from rioxarray) (2.6.0)\n",
+      "Requirement already satisfied: pillow in /opt/conda/lib/python3.7/site-packages (from rioxarray) (7.0.0)\n",
+      "Requirement already satisfied: rasterio in /opt/conda/lib/python3.7/site-packages (from rioxarray) (1.1.3)\n",
+      "Requirement already satisfied: xarray in /opt/conda/lib/python3.7/site-packages (from rioxarray) (0.15.0)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /opt/conda/lib/python3.7/site-packages (from scipy->rioxarray) (1.18.1)\n",
+      "Requirement already satisfied: cligj>=0.5 in /opt/conda/lib/python3.7/site-packages (from rasterio->rioxarray) (0.5.0)\n",
+      "Requirement already satisfied: click-plugins in /opt/conda/lib/python3.7/site-packages (from rasterio->rioxarray) (1.1.1)\n",
+      "Requirement already satisfied: attrs in /opt/conda/lib/python3.7/site-packages (from rasterio->rioxarray) (19.3.0)\n",
+      "Requirement already satisfied: snuggs>=1.4.1 in /opt/conda/lib/python3.7/site-packages (from rasterio->rioxarray) (1.4.7)\n",
+      "Requirement already satisfied: affine in /opt/conda/lib/python3.7/site-packages (from rasterio->rioxarray) (2.3.0)\n",
+      "Requirement already satisfied: click<8,>=4.0 in /opt/conda/lib/python3.7/site-packages (from rasterio->rioxarray) (7.0)\n",
+      "Requirement already satisfied: pandas>=0.25 in /opt/conda/lib/python3.7/site-packages (from xarray->rioxarray) (0.25.3)\n",
+      "Requirement already satisfied: pyparsing>=2.1.6 in /opt/conda/lib/python3.7/site-packages (from snuggs>=1.4.1->rasterio->rioxarray) (2.4.6)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /opt/conda/lib/python3.7/site-packages (from pandas>=0.25->xarray->rioxarray) (2.8.0)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /opt/conda/lib/python3.7/site-packages (from pandas>=0.25->xarray->rioxarray) (2019.3)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas>=0.25->xarray->rioxarray) (1.14.0)\n",
+      "Requirement already satisfied: salem in /home/jovyan/.local/lib/python3.7/site-packages (0.2.4)\n",
+      "Requirement already satisfied: nc-time-axis in /opt/conda/lib/python3.7/site-packages (1.2.0)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (1.18.1)\n",
+      "Requirement already satisfied: six in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (1.14.0)\n",
+      "Requirement already satisfied: cftime in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (1.1.1.2)\n",
+      "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (3.1.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (1.1.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (2.4.6)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (2.8.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (0.10.0)\n",
+      "Requirement already satisfied: setuptools in /opt/conda/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib->nc-time-axis) (45.1.0.post20200119)\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip install gcsfs\n",
-    "#!pip install pysolar\n",
-    "#!pip install zarr\n",
-    "#!pip install opendrift\n",
-    "#!pip install nc-time-axis\n",
-    "import pprint\n",
-    "import gcsfs\n",
+    "import matplotlib\n",
+    "matplotlib.use('WebAgg')\n",
+    "\n",
+    "# Date and time\n",
+    "from dateutil.relativedelta import relativedelta\n",
+    "import datetime\n",
+    "\n",
+    "# Computational modules\n",
+    "import zarr\n",
+    "import dask.delayed as delayed\n",
+    "from dask import compute\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
-    "from dateutil.relativedelta import relativedelta\n",
-    "import datetime\n",
-    "import cftime\n",
-    "import pysolar\n",
-    "from pysolar import *\n",
-    "import dask\n",
-    "import dask.delayed as delayed\n",
-    "from dask import compute\n",
-    "from matplotlib import pyplot as plt\n",
-    "import cartopy\n",
-    "import zarr\n",
+    "import gcsfs\n",
     "\n",
-    "#from tqdm.autonotebook import tqdm  # Fancy progress bars for our loops!\n",
-    "get_ipython().run_line_magic('matplotlib', 'inline')\n",
-    "plt.rcParams['figure.figsize'] = 12, 6\n",
-    "get_ipython().run_line_magic('config', \"InlineBackend.figure_format = 'retina'\")\n",
+    "# Plotting\n",
+    "from matplotlib import pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "np.seterr(divide='ignore', invalid='ignore')\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
+    "np.seterr(divide='ignore', invalid='ignore')\n",
+    "get_ipython().run_line_magic(\"matplotlib\", \"inline\")\n",
+    "plt.rcParams[\"figure.figsize\"] = 12, 6\n",
+    "get_ipython().run_line_magic(\"config\", \"InlineBackend.figure_format = 'retina'\")\n",
+    "\n",
+    "\n",
+    "# Maps   \n",
+    "import cartopy.io.shapereader as shpreader\n",
     "import cartopy.crs as ccrs\n",
-    "df = pd.read_csv('https://storage.googleapis.com/cmip6/cmip6-zarr-consolidated-stores.csv')\n",
-    "fs = gcsfs.GCSFileSystem(token='anon', access='read_only')"
+    "import cartopy.feature as cfeature\n",
+    "import rioxarray\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import box, mapping\n",
+    "\n",
+    "# Additional modules required\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install --user cmip6_preprocessing\n",
+    "!{sys.executable} -m pip install --user rioxarray\n",
+    "!{sys.executable} -m pip install --user salem\n",
+    "!{sys.executable} -m pip install --user nc-time-axis\n",
+    "\n",
+    "# Local files and utility functions\n",
+    "sys.path.append(\"./subroutines/\")\n",
+    "import pices\n",
+    "import salem"
    ]
   },
   {
