--- a/albedo_cmip6.ipynb
+++ b/albedo_cmip6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,14 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: nc-time-axis in /opt/conda/lib/python3.7/site-packages (1.2.0)\n",
-      "Requirement already satisfied: cftime in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (1.1.1.2)\n",
       "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (3.1.3)\n",
+      "Requirement already satisfied: cftime in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (1.1.1.2)\n",
       "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (1.18.1)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.7/site-packages (from nc-time-axis) (1.14.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (0.10.0)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (1.1.0)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (2.4.6)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (2.8.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.7/site-packages (from matplotlib->nc-time-axis) (0.10.0)\n",
       "Requirement already satisfied: setuptools in /opt/conda/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib->nc-time-axis) (45.1.0.post20200119)\n"
      ]
     }
@@ -37,6 +37,13 @@
     "import gcsfs\n",
     "import cartopy.crs as ccrs\n",
     "from datetime import datetime\n",
+    "# Maps   \n",
+    "import cartopy.io.shapereader as shpreader\n",
+    "import cartopy.crs as ccrs\n",
+    "import cartopy.feature as cfeature\n",
+    "import rioxarray\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import box, mapping\n",
     "\n",
     "#!{sys.executable} -m pip install --user cmip6_preprocessing\n",
     "!{sys.executable} -m pip install --user nc-time-axis\n",
@@ -94,7 +101,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running historical query on data: \n",
+      " ==> source_id=='CanESM5'and table_id=='Amon' and grid_label=='gn' and experiment_id=='historical' and variable_id=='uas'\n",
+      "\n",
+      "Running projections query on data: \n",
+      " ==> source_id=='CanESM5'and table_id=='Amon' and member_id=='r1i1p1f1' and grid_label=='gn' and experiment_id=='ssp585' and variable_id=='uas'\n",
+      "\n",
+      "CanESM5 => Dates extracted range from 1950-01-16 12:00:00 to 2100-07-16 12:00:00\n",
+      "\n",
+      "Running historical query on data: \n",
+      " ==> source_id=='CanESM5'and table_id=='Amon' and grid_label=='gn' and experiment_id=='historical' and variable_id=='vas'\n",
+      "\n",
+      "Running projections query on data: \n",
+      " ==> source_id=='CanESM5'and table_id=='Amon' and member_id=='r1i1p1f1' and grid_label=='gn' and experiment_id=='ssp585' and variable_id=='vas'\n",
+      "\n",
+      "CanESM5 => Dates extracted range from 1950-01-16 12:00:00 to 2100-07-16 12:00:00\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Config_pices():\n",
+    "    df = pd.read_csv(\n",
+    "    \"https://storage.googleapis.com/cmip6/cmip6-zarr-consolidated-stores.csv\"\n",
+    ")\n",
+    "    fs = gcsfs.GCSFileSystem(token=\"anon\", access=\"read_only\")\n",
+    "   \n",
+    "    grid_labels = [\"gn\"]  # Can be gr=grid rotated, or gn=grid native\n",
+    "    member_ids = [\"r1i1p1f1\"]  #\n",
+    "    experiment_ids = [\"ssp585\"]  #'abrupt-4xCO2',\n",
+    "    source_ids = [\"CanESM5\"]\n",
+    "    variable_ids = [\"uas\",\"vas\"]\n",
+    "    table_ids = [\"Amon\",\"Amon\"]  # Amon=atmospheric variables, Omon=Ocean variables, SImon=sea-ice variables\n",
+    "    dset_dict = {}\n",
+    "    start_date=\"1950-01-01\"\n",
+    "    end_date=\"2100-08-01\"\n",
+    "    clim_start=\"1961-01-01\"\n",
+    "    clim_end=\"1990-01-01\"\n",
+    "    \n",
+    "    selected_depth=0\n",
+    "  \n",
+    "# Create the object\n",
+    "config_pices_obj = Config_pices()\n",
+    "config_pices_obj = pices.get_and_organize_cmip6_data(config_pices_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -270,89 +331,7 @@
      "output_type": "stream",
      "text": [
       "=> model: uas_ssp585_gn_CanESM5_r1i1p1f1 variable name: uas\n",
-      "=> model: vas_ssp585_gn_CanESM5_r1i1p1f1 variable name: vas\n",
-      "<xarray.Dataset>\n",
-      "Dimensions:      (bnds: 2, time: 1807, x: 128, y: 18)\n",
-      "Coordinates:\n",
-      "    lat_bnds     (y, bnds) float64 39.07 41.86 41.86 44.66 ... 86.58 86.58 90.0\n",
-      "    lon_bnds     (x, bnds) float64 -1.406 1.406 1.406 ... 355.8 355.8 358.6\n",
-      "    height       float64 10.0\n",
-      "  * x            (x) float64 0.0 2.812 5.625 8.438 ... 348.8 351.6 354.4 357.2\n",
-      "  * y            (y) float64 40.46 43.25 46.04 48.84 ... 79.53 82.31 85.1 87.86\n",
-      "  * time         (time) object 1950-01-16 12:00:00 ... 2100-07-16 12:00:00\n",
-      "    time_bounds  (time, bnds) object dask.array<chunksize=(780, 2), meta=np.ndarray>\n",
-      "  * bnds         (bnds) int64 0 1\n",
-      "    lon          (x, y) float64 0.0 0.0 0.0 0.0 0.0 ... 357.2 357.2 357.2 357.2\n",
-      "    lat          (x, y) float64 40.46 43.25 46.04 48.84 ... 82.31 85.1 87.86\n",
-      "Data variables:\n",
-      "    vas          (time, y, x) float32 dask.array<chunksize=(780, 18, 128), meta=np.ndarray>\n",
-      "Attributes:\n",
-      "    CCCma_model_hash:            Unknown\n",
-      "    CCCma_parent_runid:          p2-pictrl\n",
-      "    CCCma_pycmor_hash:           7c87dd3a822d55650b3c17cd65db0ca251282530\n",
-      "    CCCma_runid:                 p2-his09\n",
-      "    Conventions:                 CF-1.7 CMIP-6.2\n",
-      "    YMDH_branch_time_in_child:   1850:01:01:00\n",
-      "    YMDH_branch_time_in_parent:  5950:01:01:00\n",
-      "    activity_id:                 CMIP\n",
-      "    branch_method:               Spin-up documentation\n",
-      "    branch_time_in_child:        0.0\n",
-      "    branch_time_in_parent:       1496500.0\n",
-      "    cmor_version:                3.4.0\n",
-      "    contact:                     ec.cccma.info-info.ccmac.ec@canada.ca\n",
-      "    creation_date:               2019-05-30T00:51:43Z\n",
-      "    data_specs_version:          01.00.29\n",
-      "    experiment:                  all-forcing simulation of the recent past\n",
-      "    experiment_id:               historical\n",
-      "    external_variables:          areacella\n",
-      "    forcing_index:               1\n",
-      "    frequency:                   mon\n",
-      "    further_info_url:            https://furtherinfo.es-doc.org/CMIP6.CCCma.C...\n",
-      "    grid:                        T63L49 native atmosphere, T63 Linear Gaussia...\n",
-      "    grid_label:                  gn\n",
-      "    history:                     2019-05-30T00:51:43Z ;rewrote data to be con...\n",
-      "    initialization_index:        1\n",
-      "    institution:                 Canadian Centre for Climate Modelling and An...\n",
-      "    institution_id:              CCCma\n",
-      "    license:                     CMIP6 model data produced by The Government ...\n",
-      "    mip_era:                     CMIP6\n",
-      "    nominal_resolution:          500 km\n",
-      "    parent_activity_id:          CMIP\n",
-      "    parent_experiment_id:        piControl\n",
-      "    parent_mip_era:              CMIP6\n",
-      "    parent_source_id:            CanESM5\n",
-      "    parent_time_units:           days since 1850-01-01 0:0:0.0\n",
-      "    parent_variant_label:        r1i1p2f1\n",
-      "    physics_index:               2\n",
-      "    product:                     model-output\n",
-      "    realization_index:           9\n",
-      "    realm:                       atmos\n",
-      "    references:                  Geophysical Model Development Special issue ...\n",
-      "    source:                      CanESM5 (2019): \\naerosol: interactive\\natmo...\n",
-      "    source_id:                   CanESM5\n",
-      "    source_type:                 AOGCM\n",
-      "    sub_experiment:              none\n",
-      "    sub_experiment_id:           none\n",
-      "    table_id:                    Amon\n",
-      "    table_info:                  Creation Date:(20 February 2019) MD5:374fbe5...\n",
-      "    title:                       CanESM5 output prepared for CMIP6\n",
-      "    tracking_id:                 hdl:21.14100/c3213819-15a4-4c24-a985-29f4bef...\n",
-      "    variable_id:                 vas\n",
-      "    variant_label:               r9i1p2f1\n",
-      "    version:                     v20190429\n",
-      "    status:                      2019-10-25;created;by nhn2@columbia.edu\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 1 into shape (128,64)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-c808787f1040>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m \u001b[0mcalculate_light\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_pices_obj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-52-c808787f1040>\u001b[0m in \u001b[0;36mcalculate_light\u001b[0;34m(config_pices_obj)\u001b[0m\n\u001b[1;32m     51\u001b[0m                 \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m                 \u001b[0mOSA_direct_broadband\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfliplr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Time to finish {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mstartdate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 1 into shape (128,64)"
+      "=> model: vas_ssp585_gn_CanESM5_r1i1p1f1 variable name: vas\n"
      ]
     }
    ],
@@ -380,9 +359,9 @@
     "            \n",
     "            if model_name_v==model_name:\n",
     "                ds_uas=config_pices_obj.dset_dict[key]\n",
-    "                dd=ds_uas.sel(y=slice(40,90))\n",
+    "                ds_uas=ds_uas.sel(y=slice(0,90))\n",
     "                ds_vas=config_pices_obj.dset_dict[key_v]\n",
-    "                ds=ds_vas.sel(y=slice(40,90))\n",
+    "                ds_vas=ds_vas.sel(y=slice(0,90))\n",
     "                \n",
     "                # For a for a rectangular grid the cosine of the latitude is proportional to the grid cell area.\n",
     "                area_ds_uas = ds_uas*np.cos(np.deg2rad(ds_uas[\"uas\"].y))\n",
@@ -410,10 +389,17 @@
     "             \n",
     "                OSA_direct_broadband = np.fliplr(np.array(z).reshape((m, n)))\n",
     "                print(\"Time to finish {}\".format(datetime.now()-startdate))\n",
-    "             \n",
-    "                ax = plt.axes(projection=ccrs.Orthographic(-180, 35))\n",
-    "                plt.contourf(uv.lon.values,uv.lat.values,OSA_direct_broadband) #,ax=ax, transform=ccrs.PlateCarree())\n",
-    "                ax.coastlines();\n",
+    "                 \n",
+    "                fig = plt.figure(figsize=(10, 5))\n",
+    "                ax = plt.axes(projection=ccrs.Orthographic(-10, 90))\n",
+    "                \n",
+    "               \n",
+    "                plt.contourf(uv.lon.values,uv.lat.values,OSA_direct_broadband, \n",
+    "                             transform=ccrs.PlateCarree(),\n",
+    "                             cmap='nipy_spectral')\n",
+    "                plt.colorbar()\n",
+    "                ax.coastlines()\n",
+    "               # ax.set_global()\n",
     "                plt.show()\n",
     "                \n",
     "              \n",
@@ -425,76 +411,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df=pd.read_csv(\"data/Wavelength/Fresnels_refraction.csv\", header=0, sep=\";\", decimal=\",\")\n",
-    "print(df.head())\n",
-    "wavelengths=df[\"λ\"].values\n",
-    "refractive_indexes=df[\"n(λ)\"].values\n",
-    "alpha_chl=df[\"a_chl(λ)\"].values\n",
-    "alpha_w=df[\"a_w(λ)\"].values\n",
-    "beta_w=df[\"b_w(λ)\"].values\n",
-    "alpha_wc=df[\"a_wc(λ)\"].values\n",
-    "solar_energy=df[\"E(λ)\"].values\n",
-    "\n",
-    "chl=1.00001\n",
-    "\n",
-    "# Solar zenith angle\n",
-    "µ = np.cos(np.radians(theta_deg))\n",
-    "# wind is wind at 10 m height (m/s)\n",
-    "σ = np.sqrt(0.003+0.00512*wind)\n",
-    "\n",
-    "# Vectorize the functions\n",
-    "vec_calculate_direct_reflection=np.vectorize(calculate_direct_reflection)\n",
-    "vec_calculate_diffuse_reflection=np.vectorize(calculate_diffuse_reflection)\n",
-    "vec_calculate_direct_reflection_from_chl=np.vectorize(calculate_direct_reflection_from_chl)\n",
-    "vec_calculate_diffuse_reflection_from_chl=np.vectorize(calculate_diffuse_reflection_from_chl)\n",
-    "\n",
-    "# Direct reflection\n",
-    "alpha_direct = vec_calculate_direct_reflection(refractive_indexes,µ,σ)\n",
-    "\n",
-    "# Diffuse reflection\n",
-    "alpha_diffuse = vec_calculate_diffuse_reflection(refractive_indexes,σ)\n",
-    "\n",
-    "# Reflectrion from chlorophyll and biological pigments\n",
-    "alpha_direct_chl = vec_calculate_direct_reflection_from_chl(wavelengths, chl, alpha_chl, alpha_w, beta_w, σ, µ, alpha_direct)\n",
-    "\n",
-    "# Diffuse reflection interior of water from chlorophyll\n",
-    "alpha_diffuse_chl = vec_calculate_diffuse_reflection_from_chl(wavelengths, chl, alpha_chl, alpha_w, beta_w, σ, alpha_direct)\n",
-    "\n",
-    "# OSA\n",
-    "calculate_spectral_and_broadband_OSA(wind,alpha_wc,alpha_direct,alpha_diffuse,alpha_direct_chl,alpha_diffuse_chl,solar_energy)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def create_figure2_Jin():\n",
-    "    n_air=1.0\n",
-    "    n_water=1.34\n",
-    "    winds=[0.0,3.0,12.0]\n",
-    "    \n",
-    "    colors=[\"red\",\"blue\",\"green\"]\n",
-    "    styles=['solid', 'dashed', 'dashdot']\n",
-    "    for ind,wind in enumerate(winds):\n",
-    "        reflections=[]; degrees=[]\n",
-    "        σ = np.sqrt(0.003+0.00512*wind)\n",
-    "        for theta_deg in range(0,90,1):\n",
-    "            µ = np.cos(np.radians(theta_deg))\n",
-    "            reflections.append(calculate_direct_reflection(n_water/n_air,µ,σ))\n",
-    "            degrees.append(theta_deg)\n",
-    "\n",
-    "        plt.plot(degrees, reflections, color=colors[ind],linestyle=styles[ind])\n",
-    "    plt.title(\"Reflectance of light at angles from air to sea\")\n",
-    "    plt.ylabel(\"Reflectance\")\n",
-    "    plt.xlabel(\"Degrees zenith\")\n",
-    "  #  plt.yscale(\"log\")\n",
-    "    plt.show()\n",
-    "    \n",
-    "create_figure2_Jin()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
