--- a/albedo.ipynb
+++ b/albedo.ipynb
@@ -143,6 +143,7 @@
    "outputs": [],
    "source": [
     "def calculate_diffuse_reflection(n_λ,σ):\n",
+    "    # Diffuse albedo from Jin et al., 2006 (Eq 5b) \n",
     "    return -0.1479 + 0.1502*n_λ-0.0176*n_λ*σ"
    ]
   },
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,8 +242,8 @@
     "\n",
     "    # Integrate across all wavelengths 200-4000nm at 10 nm wavelength bands and then \n",
     "    # weight by the solar energy at each band\n",
-    "    OSA_direct_broadband = np.sum(OSA_direct*solar_energy)/np.sum(solar_energy)\n",
-    "    OSA_diffuse_broadband = np.sum(OSA_diffuse*solar_energy)/np.sum(solar_energy)\n",
+    "    OSA_direct_broadband = np.sum(OSA_direct*solar_energy)\n",
+    "    OSA_diffuse_broadband = np.sum(OSA_diffuse*solar_energy)\n",
     "    print(OSA_direct_broadband,OSA_diffuse_broadband)"
    ]
   },
