Made it work correctly for plotting with cartopy - still an issue with OSA_direct

--- a/regrid_cmip6.ipynb
+++ b/regrid_cmip6.ipynb
@@ -2,24 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ESMPyManager:\n",
+       "    local_pet = 0\n",
+       "    pet_count = 1\n",
+       ")"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import xesmf as xe"
+    "import xesmf as xe\n",
+    "import ESMF\n",
+    "ESMF.Manager(debug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See trick to make xesmf work with difficult grid points\n",
+    "https://nbviewer.jupyter.org/gist/bradyrx/421627385666eefdb0a20567c2da9976"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def regrid_variable(varname,ds_in,ds_out,transpose=True):\n",
-    "    regridder = xe.Regridder(ds_in, ds_out, 'bilinear', reuse_weights=True)\n",
+    "def regrid_variable(varname, ds_in, ds_out, transpose=True):\n",
+    "    regridder = xe.Regridder(ds_in, ds_out, 'bilinear', reuse_weights=False, ignore_degenerate=True)\n",
     "    regridder._grid_in = None\n",
     "    regridder._grid_out = None\n",
-    "               \n",
     "    if transpose:\n",
     "        return regridder(ds_in[varname].T)\n",
     "    else:\n",
